<resources>
    <string name="app_name" translatable="false">AMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="logprof">Login As Professor</string>
    <string name="logstudent">Login As Student</string>
    <string name="createAccount">Create New Account</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="dismiss">Dismiss</string>
    <string name="search">Search</string>
    <string name="pause">Pause</string>
    <string name="student">Student1</string>
    <string name="active">OFF</string>
    <string name="timeleft">05 : 00</string>
    <string name="timeleft2">Time Left :</string>
    <string name="resume">Resume</string>
    <string name="code">Enter code</string>
    <string name="ok">OK</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="endingMessage">Thank you for ending these questions</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="schedule">Schedule</string>
    <string name="aboutUs">About Us</string>
    <string name="logout">Logout</string>
    <string name="weekDays">weekDay</string>
    <string name="lecturetime">05:30 PM</string>
    <string name="accept">Accept</string>
    <string name="lecture">Lecture</string>
    <string name="lectureName">Lecture Name</string>
    <string name="lecturename">Lecture Name</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="start_time">09: 00 AM</string>
    <string name="time">3 hours</string>
    <string name="marks">100 Marks</string>
    <string name="attendance_place">Hall 3</string>
    <string name="current_attendance">Current Attendance</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
