<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test">

    <TextView
        android:id="@+id/proj_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="45sp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/proj_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:textSize="16sp"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:background="@drawable/home_back"
        android:drawableLeft="@drawable/username"
        android:drawablePadding="25dp"
        android:padding="18dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:hint="@string/password"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:background="@drawable/home_back"
        android:drawableLeft="@drawable/pass"
        android:drawablePadding="25dp"
        android:padding="18dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:background="@drawable/rounded_button3"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:drawableRight="@drawable/home_log"
        android:paddingRight="95dp"
        android:onClick="test"
        android:drawablePadding="-100dp"/>

</RelativeLayout>