<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aDialog"
    android:layout_width="260dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:alpha="1"
    android:background="#99000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.github.florent37.shapeofview.shapes.CircleView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/instructorImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/albert" />
        </com.github.florent37.shapeofview.shapes.CircleView>

        <TextView
            android:id="@+id/lectureName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/lecturename"
            android:textColor="@color/enable_thumb"
            android:textSize="20sp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lectureNameRow"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="25dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/instructor2" />

        <ImageView
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@color/enable_thumb" />

        <TextView
            android:id="@+id/instructorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/instructor_name"
            android:textColor="@color/enable_thumb"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/startTimeRow"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="25dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/start_time" />

        <ImageView
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@color/enable_thumb" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/start_time"
            android:textColor="@color/enable_thumb"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/timeRow"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="25dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/time" />

        <ImageView
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@color/enable_thumb" />

        <TextView
            android:id="@+id/timeToLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/time"
            android:textColor="@color/enable_thumb"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Marks"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="25dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/marks" />

        <ImageView
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@color/enable_thumb" />

        <TextView
            android:id="@+id/marksSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/marks"
            android:textColor="@color/enable_thumb"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hallRow"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="25dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/attendance_place" />

        <ImageView
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@color/enable_thumb" />

        <TextView
            android:id="@+id/attendacePlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/attendance_place"
            android:textColor="@color/enable_thumb"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/okDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="45dp"
        android:background="@color/enable_thumb"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/ok"
        android:textColor="@color/colorWhite"

        android:textSize="20sp" />


</LinearLayout>