<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test"
    tools:context=".Home"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/attendance"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/home_back"
        android:drawableTop="@drawable/attendance3"
        android:onClick="currentAttendance"
        android:paddingTop="12dp"
        android:text="@string/current_attendance"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/home_schedule"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/home_schedule"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/attendance"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/home_back"
        android:drawableTop="@drawable/home_schedule"
        android:onClick="schedule"
        android:paddingTop="12dp"
        android:text="@string/schedule"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/attendance"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/home_aboutus"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/attendance"
        android:layout_marginBottom="133dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/home_back"
        android:drawableTop="@drawable/home_about"
        android:onClick="aboutUs"
        android:paddingTop="12dp"
        android:text="@string/aboutUs"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attendance"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/home_schedule"
        android:layout_alignTop="@+id/home_aboutus"
        android:layout_marginBottom="133dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/home_back"
        android:drawableTop="@drawable/home_log"
        android:onClick="logout"
        android:paddingStart="0dp"
        android:paddingTop="12dp"
        android:text="@string/logout"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home_aboutus"
        app:layout_constraintTop_toBottomOf="@+id/home_schedule"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>